# ggobi

./: .gitignore  .psrc  ACKNOWLEDGEMENTS  Bugs  COPYING  Changelog  Colors  Diary  EPLicense.txt  GGStructSizes.c  GGobiAPI.h  GGobiApp.h  GGobiAppClass.c  GGobiEvents.h  GNUmakefile.in  GtkObjects-Todo.html  GtkSignalDef.c  INSTALL  INSTALL.html  Lines  Makeconf.in  Makefile  Makefile.am  Makefile.win32  ManualGGobi.def  NEWS  README.OSX  README.md  Todo  VersionInfo  array.c  ash1d.c  barchart.c  barchartClass.c  barchartDisplay.h  barchart_ui.c  bootstrap  brush.c  brush_api.c  brush_bins.c  (+210 more)
Install/: DevelopersInstall.html  GGobiPackageCreate.pmsp  GNUmakefile.admin  GNUmakefile.all  GNUmakefile.in  GNUmakefile_gtkext.in  GNUmakefile_src.in  INSTALL  INSTALL-xml.html  INSTALL.html  INSTALL.windows  Makeconf.in  Plugins.in  README  README.developers  README.windows  Welcome.txt  apiDocConfig  bugTemplate.in  config.h.in  configure.in  configure_src.in  ggobi-config.in  ggobi-install.in  ggobi.in  ggobi.iss  ggobi.iss.in  ggobi.pc.in  ggobirc.in  local.config.in  makeMacPackage  plugin.in  setLD.bsh.in  setLD.csh.in
doc/: Changes.html  GNUmakefile  InitializationFile.xml  Makefile.am  XML.tex  example-class.tex  gtk.bib  manual.tex
doc/manual/: GNUmakefile  XML.tex
doc/reference/: Makefile.am  ggobi-docs.sgml  ggobi-sections.txt  ggobi.types
doc/reference/tmpl/: ggobi-bitset.sgml  ggobi-bitset.sgml.bak  ggobi-data-factory-csv.sgml  ggobi-data-factory-csv.sgml.bak  ggobi-data-factory-xml.sgml  ggobi-data-factory-xml.sgml.bak  ggobi-data-factory.sgml  ggobi-data-factory.sgml.bak  ggobi-data.sgml  ggobi-data.sgml.bak  ggobi-gsf-input-ftp.sgml  ggobi-gsf-input-ftp.sgml.bak  ggobi-gsf-input-http.sgml  ggobi-gsf-input-http.sgml.bak  ggobi-gui-component.sgml  ggobi-gui-component.sgml.bak  ggobi-gui-transform.sgml  ggobi-gui-transform.sgml.bak  ggobi-input-decoder-bgzip.sgml  ggobi-input-decoder-bgzip.sgml.bak  ggobi-input-decoder.sgml  ggobi-input-decoder.sgml.bak  ggobi-input-source-factory.sgml  ggobi-input-source-factory.sgml.bak  ggobi-input-source-file.sgml  ggobi-input-source-file.sgml.bak  ggobi-input-source-ftp.sgml  ggobi-input-source-ftp.sgml.bak  ggobi-input-source-http.sgml  ggobi-input-source-http.sgml.bak  ggobi-input-source.sgml  ggobi-input-source.sgml.bak  ggobi-pipeline-factory.sgml  ggobi-pipeline-factory.sgml.bak  ggobi-pipeline-message.sgml  ggobi-pipeline-message.sgml.bak  ggobi-plugin-factory.sgml  ggobi-plugin-factory.sgml.bak  ggobi-plugin.sgml  ggobi-plugin.sgml.bak  (+34 more)
plugins/DataViewer/: AUTHORS  GNUmakefile  Makefile  Makefile.am  Makevars.in  NEWS  README  configure.ac  configure.in  dataviewer.c  local.config.in  plugin.xml  worksheet.c
plugins/DataViewer/Install/: GNUmakefile.admin
plugins/DescribeDisplay/: AUTHORS  GNUmakefile  Makefile.am  README  Rschema  configure.ac  configure.am  configure.in  dspd_cbacks.c  dspdesc.c  dspdesc.h  macros.h  plugin.xml
plugins/DescribeDisplay/Docs/: DescribeDisplay.tex
plugins/DescribeDisplay/Install/: GNUmakefile.admin
plugins/GraphAction/: AUTHORS  COPYING  GNUmakefile  Makefile.am  README  configure.ac  configure.in  ga_cbacks.c  graphact.c  graphact.h  init.c  plugin.xml
plugins/GraphAction/Install/: GNUmakefile.admin
plugins/GraphLayout/: GNUmakefile  Makefile.am  README  configure.ac  configure.in  defines.h  glayout.c  glayout.h  graphviz.c  init.c  local.config.in  plugin.xml  radial.c  spring.c
plugins/GraphLayout/Docs/: GraphLayout.tex  references.bib
plugins/GraphLayout/Install/: GNUmakefile.admin
plugins/GraphLayout/old/: cmds.c
plugins/GraphLayout/vapi/: graphviz.vapi
plugins/JVM/: FAQ.html  Makefile  README  Todo.html  configure.in  ggobiAccess.c  jvm.c  jvm.h  local.config.in  plugin.xml  plugin.xml.in  setLD.bsh.in  setLD.csh.in
plugins/JVM/Gtk/: GGobiCallbackTest.java  GNUmakefile  GtkColorDialog.java  README  plugin.xml.in
plugins/JVM/Install/: GNUmakefile.admin
plugins/JVM/ggobi/: BulkPlugin.java  CStruct.java  DummyPlugin.java  InputPlugin.java  Makefile  RandomPlugin.java  RecordWisePlugin.java  TestPlugin.java  bar.java  datad.java  ggobi.java  plugin.java
plugins/Python/: GNUmakefile  Python.c  README  configure  configure.in  local.config.in  plugin.xml.in
plugins/Python/Install/: GNUmakefile.admin  distutilsInc.py  distutilsLib.py  version.py
plugins/Python/python/: GGobiPlugin.py
plugins/Python/tests/: plugin.xml-test  samplePlugin.py
plugins/R/: GNUmakefile  Makevars.in  R.c  README  REval.c  REval.h  configure.in  local.config.in  plugin.xml
plugins/R/Docs/: overview.tex
plugins/R/Install/: GNUmakefile.admin
plugins/R/R/: fileSelection.R  ggobi.html  help.R  randomInput.R  testPlugin.R
plugins/VarCloud/: AUTHORS  GNUmakefile  Makefile.am  README  cbacks.c  configure.ac  configure.in  init.c  local.config.in  plugin.xml  varcloud.c  varcloud.h
plugins/VarCloud/Install/: GNUmakefile.admin
plugins/ggvis/: AUTHORS  Dtarget.c  GNUmakefile  Makefile  Makefile.am  README  anchor.c  cmds.c  configure.ac  configure.in  ggv_cbacks.c  ggv_qsort.c  ggv_utils.c  ggvis.c  ggvis.def  ggvis.h  graphviz.c  histogram.c  init.c  local.config.in  mds.c  plugin.xml  radial.c  shepard.c  spring.c  stressplot.c
plugins/ggvis/Docs/: ggvis.tex  help.tex  references.bib
plugins/ggvis/Install/: GNUmakefile.admin
src/: CmdArgHelp.c  GGStructSizes.c  GGobiAPI.h  GGobiApp.h  GGobiAppClass.c  GGobiEvents.h  GNUmakefile.in  GtkSignalDef.c  Makefile.am  array.c  array.h  ash1d.c  attraccessor.py  barchart.c  barchartClass.c  barchartDisplay.h  barchart_ui.c  bitset.gob  bitset.vala  brush.c  brush_api.c  brush_bins.c  brush_init.c  brush_link.c  brush_link_ui.c  brush_ui.c  brushing.h  canvas.vala  cluster.c  cluster_ui.c  clutter-buffer.vala  clutter-matrix.vala  clutter-stack.vala  clutter-surface.vala  cogl-drawable.vala  cokus.c  color.c  color_ui.c  colorscheme.h  config.h.in  (+309 more)
src/old/: dbms.c  dbms.h  dbms_ui.c  dbms_ui.h  print.h  read_mysql.c  read_mysql.h  smooth_ui.c  write_state.c
tests/: Makefile.am  dummy.vala  surface.vala  surfaces.vala
(+433 files in other folders)
